# dbtective

./: .cz.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CHANGELOG.md.j2  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  dist-workspace.toml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: CI_pipeline.yml  build-binaries.yml  ci.yml  compile-dbtective.yml  pages.yml  publish.yml  release.yml  test.yml
dbt_artifact_parser/: Cargo.toml
dbt_artifact_parser/src/: lib.rs
dbt_artifact_parser/src/catalog/: mod.rs  nodes.rs  parse_catalog.rs  source.rs
dbt_artifact_parser/src/manifest/: exposure.rs  macro_obj.rs  metric.rs  mod.rs  parse_manifest.rs  saved_query.rs  semantic_model.rs  source.rs  unit_test.rs
dbt_artifact_parser/src/manifest/dbt_objects/: docs.rs  meta.rs  mod.rs
dbt_artifact_parser/src/manifest/nodes/: mod.rs  node.rs  test.rs
dbt_project/: README.md  dbt_project.yml  dbtective.yml  profiles.yml  selectors.yml
docs/: hugo.yaml
docs/content/: _index.md  (+1 more)
scripts/: generate_changelog.sh  git_cliff_template.toml
src/: main.rs
tests/: integration_test.rs  test_catalog_manifest.rs  test_catalog_tests.rs  test_config.rs  test_has_contract_enforced.rs  test_has_description.rs  test_has_metadata_keys.rs  test_has_refs.rs  test_has_tags.rs  test_has_unique_tests.rs  test_includes_excludes.rs  test_is_not_orphaned.rs  test_model_materializations.rs  test_naming_convention.rs  test_parsing.rs  test_run.rs
(+139 files in other folders)
